--- a/.github/workflows/deploy-basic.yml
+++ b/.github/workflows/deploy-basic.yml
@@ -2,7 +2,7 @@ name: Basic Zayland Website Deployment
 on:
   push:
     paths:
-      - 'nobody-knows/**'
+      - "nobody-knows/**"
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: us-east-2
       - name: Deploy Website
         run: cd nobody-knows && npm install && npm run build && aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --delete
       - name: Update Cache Control for index.html
