--- a/nobody-knows/package.json
+++ b/nobody-knows/package.json
@@ -6,9 +6,13 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"axios": "^0.21.1",
+		"moment": "^2.29.1",
+		"moment-duration-format": "^2.3.2",
 		"node-sass": "^4.14.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
+		"react-audio-player": "^0.16.1",
 		"react-dom": "^16.13.1",
 		"react-eventbrite-popup-checkout": "^1.0.5",
 		"react-player": "^2.5.0",
