--- a/nobody-knows/public/manifest.json
+++ b/nobody-knows/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Zayland",
-	"name": "Zayland | 333 Out Now!",
+	"name": "Zayland | i can't feel Out Now!",
 	"icons": [
 		{
 			"src": "./favicon_io/favicon.ico",
